<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:id="@+id/categories_list_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:layout_width="match_parent"
        android:layout_height="160dp"

        android:gravity="bottom"

        android:textAppearance="@style/TextAppearance.WakeMeUp.Display1"
        android:text="@string/title_alarm"

        android:paddingStart="32dp"
        android:paddingEnd="0dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/categories_list"
        android:name="com.example.wakemeup.WakeupCallFragment"

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"

        android:layout_weight="1.0"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="80dp"
        android:contentDescription="@string/add_group"
        android:text="@string/add_group"
        android:textAppearance="@style/TextAppearance.WakeMeUp.Display4"

        app:icon="@drawable/outline_add_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="10dp"
        app:tint="#FFFFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/title"
        app:layout_constraintEnd_toEndOf="@+id/title"
        app:srcCompat="@drawable/sharp_table_rows_24"
        android:contentDescription="@string/list_view" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="2dp"
        app:tint="#FF000000"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:srcCompat="@drawable/sharp_grid_view_24"
        android:contentDescription="@string/grid_view" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/most_recent"
        android:textAppearance="@style/TextAppearance.WakeMeUp.Display5"
        android:gravity="center_vertical"
        app:drawableEndCompat="@drawable/outline_expand_more_24"
        app:drawableTint="@color/colorOnPrimaryVariant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

</androidx.constraintlayout.widget.ConstraintLayout>
